added card component to app

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,15 @@
     transform: rotate(360deg);
   }
 }
+
+.cards-list {
+  display: flex;
+  flex-wrap: nowrap;
+  /* gap: 20px;
+  overflow-x: auto; */
+  margin: 1em 0em 0em 30em;
+}
+
+section {
+  padding: 20px;
+}
